# maitreya

./: CONTRIBUTING.md  README.md  SETUP-GUIDE.md  THE_TIMID_REVOLUTION.md  WORKSPACE_TODO_LIST.md
clojure-ui/: project.clj
clojure-ui/src/maitreya/: core.clj
clojure-ui/src/maitreya/audio/: engine.clj
clojure-ui/src/maitreya/ui/: main_window.clj
docs/: PROGRESS.md  clojure-ui-guide.md  educational-tutorials.md  getting-started.md  haskell-core.md  reaper-integration.md  rust-engine.md
gioia-library/: README.md
haskell-core/: package.yaml
haskell-core/src/Maîtreya/: Core.hs
haskell-core/src/Maîtreya/SIEGE/: Expressions.hs
ronin-spec/: README.md
rust-engine/: Cargo.toml
rust-engine/src/: lib.rs
