[package]
name = "maitreya-rust-engine"
version = "0.1.0"
edition = "2021"
authors = ["b122m faeb <b122m@faeb.com>"]
description = "MAITREYA DAW - Rust Performance Engine"
license = "Unlicense"
repository = "https://github.com/kae3g/maitreya"

[dependencies]
# Audio processing
cpal = "0.15"
hound = "3.5"
rubato = "0.14"

# WebAssembly
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"

# Performance
rayon = "1.8"
crossbeam = "0.8"

# Math and utilities
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
